PR/50749: David Binderman: check bounds before dereference.